Setting margin at images for proper alignment in response to issue #690

--- a/css/custom.css
+++ b/css/custom.css
@@ -210,3 +210,7 @@ nav{
   display: flex;
   flex-wrap: wrap;
 }
+
+.img-responsive{
+  margin: auto;
+}
